--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ header {
   padding: 30px;
   border-radius: 10px;
   margin-bottom: 50px;
+    box-shadow: 0 0 10px #00e5ff;
 }
 
 .background h2 {
@@ -170,6 +171,82 @@ header {
   margin-bottom: 10px;
   color: #00e5ff;
 }
+.services {
+  text-align: center;
+  padding: 50px 20px;
+  
+  /* background-color: #f9f9f9; */
+}
+
+.services h2 {
+  font-size: 2rem;
+  margin-bottom: 30px;
+  color: #00e5ff ;
+}
+
+.services-list {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.service-card {
+  /* background: white; */
+  box-shadow: 0 0 10px #00e5ff;
+  border-radius: 10px;
+  padding: 20px;
+  width: 280px;
+  /* box-shadow: 0 4px 8px rgba(0,0,0,0.1); */
+  transition: transform 0.3s ease;
+}
+
+.service-card:hover {
+  transform: translateY(-5px);
+}
+
+.service-card h3 {
+  margin-bottom: 10px;
+    color: #00e5ff ;
+}
+/* Service Section Button Styling */
+.service-card button {
+  background-color: #00e5ff; /* हरा रंग */
+  border: none;
+  padding: 10px 20px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.service-card button a {
+  text-decoration: none;
+  color: white; /* टेक्स्ट सफ़ेद */
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.service-card button:hover {
+  background-color: #00e5ff; /* गहरा हरा */
+  transform: scale(1.05);
+}
+.service-btn {
+  background-color: #00e5ff;
+  padding: 10px 20px;
+  border-radius: 8px;
+  color: white;
+  font-size: 15px;
+  font-weight: bold;
+  text-decoration: none;
+  transition: 0.3s ease;
+}
+
+.service-btn:hover {
+  background-color:  #00e5ff;
+  transform: scale(1.05);
+}
+
+
 
 /* Contact */
 .contact h2 {
